eagle_test/error/stream_error.eagle
var s = stream([1, 2, 3]).map((x) -> x*x*x);
print s.filter((x) -> x > 5).count(); // expected: 2
print s.count();
// expected: [RuntimeError at line 3] Stream should not be executed repeatedly

print stream([1, 2, 3]).to_dict();
// expected: [RuntimeError at line 6] Cannot convert element#0(not a sequence) to an dict entry.

print stream([1, 2, 3]).map((x) -> {
    if (x <= 1) return (x, x+1);
    if (x == 2) return [x, str(x)];
    return (x, x+1, x+2);
}).to_dict();
// expected: [RuntimeError at line 13] Cannot convert element#2(a sequence whose size is not 2) to an dict entry.